--- a/404.html
+++ b/404.html
@@ -8,13 +8,13 @@
     
     <meta name="description" content="">
     
-    <link rel="preload" href="/assets/css/0.styles.5ab8ebd7.css" as="style"><link rel="preload" href="/assets/js/app.da4df816.js" as="script"><link rel="preload" href="/assets/js/6.2d0a63f8.js" as="script"><link rel="prefetch" href="/assets/js/2.733019b2.js"><link rel="prefetch" href="/assets/js/3.39104db2.js"><link rel="prefetch" href="/assets/js/4.fc333d27.js"><link rel="prefetch" href="/assets/js/5.bfef3080.js"><link rel="prefetch" href="/assets/js/7.c335e38b.js"><link rel="prefetch" href="/assets/js/8.5254ea86.js"><link rel="prefetch" href="/assets/js/9.def73c20.js">
-    <link rel="stylesheet" href="/assets/css/0.styles.5ab8ebd7.css">
+    <link rel="preload" href="/assets/css/0.styles.e8e4f3a3.css" as="style"><link rel="preload" href="/assets/js/app.4a5dd0a8.js" as="script"><link rel="preload" href="/assets/js/6.2d0a63f8.js" as="script"><link rel="prefetch" href="/assets/js/2.733019b2.js"><link rel="prefetch" href="/assets/js/3.39104db2.js"><link rel="prefetch" href="/assets/js/4.d12742be.js"><link rel="prefetch" href="/assets/js/5.216cae74.js"><link rel="prefetch" href="/assets/js/7.c335e38b.js"><link rel="prefetch" href="/assets/js/8.5254ea86.js"><link rel="prefetch" href="/assets/js/9.def73c20.js">
+    <link rel="stylesheet" href="/assets/css/0.styles.e8e4f3a3.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>Looks like we've got some broken links.</blockquote> <a href="/" class="router-link-active">
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>There's nothing here.</blockquote> <a href="/" class="router-link-active">
       Take me home.
     </a></div></div><div class="global-ui"></div></div>
-    <script src="/assets/js/app.da4df816.js" defer></script><script src="/assets/js/6.2d0a63f8.js" defer></script>
+    <script src="/assets/js/app.4a5dd0a8.js" defer></script><script src="/assets/js/6.2d0a63f8.js" defer></script>
   </body>
 </html>
